<resources>
    <string name="app_name">Tagesbuch</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in_text">New to Tagebuch?Signup here</string>
    <string name="start_your_journey">Start your journey</string>
    <string name="tagebuch">tagebuch</string>
    <string name="emailaddress">EmailAddress</string>
    <string name="gobacktologin">GoBackToLogin</string>
    <string name="take_me_to_the_woods">Take me to the woods</string>
    <string name="tagesbuch">tagesbuch</string>
    <string name="keep_it_memorable">Keep it memorable</string>
</resources>