<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="337sp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="430sp"
        tools:layout_editor_absoluteY="448sp"
        android:layout_marginBottom="40sp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="327sp"
        android:layout_height="59sp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="43sp"
        tools:layout_editor_absoluteY="324sp"
        android:layout_marginBottom="40sp"/>

    <CheckBox
        android:layout_width="231sp"
        android:layout_height="wrap_content"
        android:hint="@string/forgot_password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="56sp"
        tools:layout_editor_absoluteY="417sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="70sp"/>

    <Button
        android:layout_width="252sp"
        android:layout_height="61sp"
        android:layout_gravity="center_horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="88sp"
        tools:layout_editor_absoluteY="494sp"
        android:text="@string/start_your_journey"
        android:layout_marginBottom="50sp"/>

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="18sp" />
</LinearLayout>